--- a/4roomforum/Views/Shared/_Layout.cshtml
+++ b/4roomforum/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/_4roomforum.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
@@ -25,7 +26,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Chuyên mục</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Thread" asp-action="Index">Chủ đề</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Bài viết</a>
+                        </li>
                     </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                    <div class="d-flex">
+                        <a class="btn btn-outline-primary me-2" href="#" role="button">Đăng nhập</a>
+                        <a class="btn btn-primary" href="#" role="button">Đăng ký</a>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -37,8 +55,16 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - _4roomforum - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container d-flex justify-content-between align-items-center">
+            <div>
+                &copy; 2024 - _4roomforum - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+            <div>
+                <a href="https://www.facebook.com" class="text-dark me-3"><i class="fab fa-facebook"></i> Facebook</a>
+                <a href="mailto:contact@4roomforum.com" class="text-dark me-3"><i class="fas fa-envelope"></i> Email</a>
+                <a href="https://www.instagram.com" class="text-dark me-3"><i class="fab fa-instagram"></i> Instagram</a>
+                <a href="https://www.twitter.com" class="text-dark"><i class="fab fa-twitter"></i> X</a>
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
