--- a/4roomforum/Views/Shared/_Layout.cshtml
+++ b/4roomforum/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - _4roomforum</title>
+    <title>@ViewData["Title"] - 4roomforum</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/_4roomforum.styles.css" asp-append-version="true" />
