--- a/4roomforum/Views/Shared/_Layout.cshtml
+++ b/4roomforum/Views/Shared/_Layout.cshtml
@@ -40,10 +40,22 @@
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
-                    <div class="d-flex">
-                        <a class="btn btn-outline-primary me-2" asp-action="Signin" asp-controller="Home" role="button">Đăng nhập</a>
-                        <a class="btn btn-primary"  asp-action="Signup" asp-controller="Home"  role="button">Đăng ký</a>
-                    </div>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <div class="d-flex">
+                            <span class="navbar-text me-2">Hello, @User.Identity.Name!</span>
+                            <a class="btn btn-primary" asp-area="" asp-controller="User" asp-action="Profile" role="button">Profile</a>
+                            <a class="btn btn-outline-primary me-2" asp-action="SignOut" asp-controller="Login" role="button">Đăng xuất</a>
+                            
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="d-flex">
+                            <a class="btn btn-outline-primary me-2" asp-action="SignIn" asp-controller="Login" role="button">Đăng nhập</a>
+                            <a class="btn btn-primary" asp-action="SignUp" asp-controller="Login" role="button">Đăng ký</a>
+                        </div>
+                    }
                 </div>
             </div>
         </nav>
