--- a/4roomforum/Views/Shared/_AdminLayout.cshtml
+++ b/4roomforum/Views/Shared/_AdminLayout.cshtml
@@ -36,7 +36,7 @@
                 </li>
             </ul>
             <div class="d-flex">
-                <a class="btn btn-outline-light me-2" asp-controller="Account" asp-action="Logout">Logout</a>
+                <a class="btn btn-outline-light me-2" asp-controller="Login" asp-action="SignOut">Logout</a>
             </div>
         </div>
     </nav>
