login+ 1 tí user profile

--- a/4roomforum/Views/Shared/_Layout.cshtml
+++ b/4roomforum/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                     {
                         <div class="d-flex">
                             <span class="navbar-text me-2">Hello, @User.Identity.Name!</span>
-                            <a class="btn btn-primary" asp-area="" asp-controller="User" asp-action="Profile" role="button">Profile</a>
+                            <a class="btn btn-primary" asp-area="" asp-controller="Login" asp-action="Profile" role="button">Profile</a>
                             <a class="btn btn-outline-primary me-2" asp-action="SignOut" asp-controller="Login" role="button">Đăng xuất</a>
                             
                         </div>
