--- a/4roomforum/Views/Login/Profile.cshtml
+++ b/4roomforum/Views/Login/Profile.cshtml
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
         <label>Avatar</label><br />
-        <img src="@Url.Content("~/img/" + Model.Avatar)" alt="Avatar" class="img-thumbnail" />
+        <img src="@Url.Content("~/imgs/" + Model.Avatar)" alt="Avatar" class="img-thumbnail" width="100px"  />
     </div>
 </form>
 
