--- a/4roomforum/Views/Admin/threads.cshtml
+++ b/4roomforum/Views/Admin/threads.cshtml
@@ -23,7 +23,7 @@
                     <th scope="col">ThreadTitle</th>
                     <th scope="col">ThreadContent</th>
                     <th scope="col">CreatedBy</th>
-                    <th scope="col">CreadtedDate</th>
+                    <th scope="col">CreatedDate</th>
                     <th scope="col">ViewCount</th>
                     <th scope="col">IsPinned</th>
                     <th scope="col">IsClosed</th>
@@ -38,7 +38,7 @@
                         <td>@thread.ThreadTitle</td>
                         <td>@thread.ThreadContent</td>
                         <td>@thread.CreatedBy</td>
-                        <td>@thread.CreadtedDate</td>
+                        <td>@thread.CreatedDate</td>
                         <td>@thread.ViewCount</td>
                         <td>@thread.IsPinned</td>
                         <td>@thread.IsClosed</td>
